manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: garage-storage
  labels:
    name: garage-storage
    app: garage-s3
